--- a/styles.css
+++ b/styles.css
@@ -435,3 +435,40 @@ form {
     align-items: center;
     justify-content: space-between;
 }
+
+@media screen and (max-width: 768px) {
+  .contact {
+    width: 90%;
+  }
+
+  .custom {
+    display: none;
+  }
+
+  .data {
+    flex-direction: column;
+  }
+
+  .contact-element {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+
+  .contact-button {
+    padding: 22px 20px;
+  }
+
+  .socials {
+    flex-direction: column;
+    margin-bottom: 20px;
+  }
+
+  .chat {
+    display: none;
+  }
+
+  .mobile {
+    margin-top: 60px;
+    display: block;
+  }
+}
