--- a/styles.css
+++ b/styles.css
@@ -417,7 +417,6 @@ form {
   width: 48.5%;
   height: 50px;
   margin-bottom: 20px;
-  /* margin-right: 0; */
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -439,7 +438,7 @@ form {
   margin-top: 30px;
   font-weight: 500;
   font-size: 15px;
-  padding: 15px;
+  padding: 17px 43px;
   background-color: #9390ff;
   border: 1px solid #9390ff;
   margin-bottom: 108px;
@@ -507,13 +506,7 @@ form {
     display: block;
   }
 
-  /* .fname-input {
-    display: none;
-  } */
-
   .for-mobile {
     display: block;
   }
 }
-
-
