Add animation rotate to logo

--- a/styles.css
+++ b/styles.css
@@ -510,3 +510,15 @@ form {
     display: block;
   }
 }
+
+/* Transition and Animation */
+header .logo {
+  -webkit-animation: spin 3s linear infinite;
+  -moz-animation: spin 1s linear infinite;
+  animation: spin 1s linear infinite;
+}
+
+/* use keyframes */
+@-webkit-keyframes spin{
+  100%{-webkit-transform: rotate(360deg);}
+}
