--- a/styles.css
+++ b/styles.css
@@ -1,531 +1,524 @@
 body {
-  background-color: #191765;
-  font-weight: 500;
-  font-family: 'Roboto', sans-serif;
-  position: relative;
+    background-color: #191765;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
+    position: relative;
 }
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 header {
-  width: 90%;
-  margin: 0 auto;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  color: #fff;
-  font-size: 15px;
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
+    width: 90%;
+    margin: 0 auto;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    color: #fff;
+    font-size: 15px;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 .app-container {
-  margin-top: 73px;
+    margin-top: 73px;
 }
 
 header a {
-  font-size: 18px;
-  text-decoration: none;
-  color: #fff;
+    font-size: 18px;
+    text-decoration: none;
+    color: #fff;
 }
 
 header ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 header ul li {
-  margin-left: 32px;
+    margin-left: 32px;
 }
 
 .header-icons {
-  display: flex;
+    display: flex;
 }
 
 .items li {
-  margin-bottom: 20px;
-  color: #fff;
-  font-weight: 400;
-  font-size: 14px;
+    margin-bottom: 20px;
+    color: #fff;
+    font-weight: 400;
+    font-size: 14px;
 }
 
 header ul a:hover {
-  color: #008ad7;
+    color: #008ad7;
 }
 
 header img {
-  display: none;
+    display: none;
 }
 
 .first {
-  margin-top: 80px;
-  background-image: url(./assets/images/two_circles_header.png);
-  background-repeat: no-repeat;
-  background-size: contain;
+    margin-top: 80px;
+    background-image: url(./assets/images/two_circles_header.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .first-head {
-  width: 453px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 0 auto;
+    width: 453px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
 }
 
 .first-head h1 {
-  color: #9390ff;
-  font-weight: 700;
-  font-size: 80px;
-  text-align: center;
+    color: #9390ff;
+    font-weight: 700;
+    font-size: 80px;
+    text-align: center;
 }
 
 .first-head h2 {
-  color: #fff;
-  margin-top: 15px;
-  margin-bottom: 88px;
-  font-size: 40px;
-  text-align: center;
+    color: #fff;
+    margin-top: 15px;
+    margin-bottom: 88px;
+    font-size: 40px;
+    text-align: center;
 }
 
 .first-head p {
-  font-size: 20px;
-  font-weight: 400;
-  color: #b3bac5;
-  width: 100%;
-  text-align: center;
-  line-height: 32px;
+    font-size: 20px;
+    font-weight: 400;
+    color: #b3bac5;
+    width: 100%;
+    text-align: center;
+    line-height: 32px;
 }
 
 .first-line {
-  width: 100%;
-  height: 0;
-  background-color: #646369;
-  margin-top: 50px;
-  color: #646369;
+    width: 100%;
+    height: 0;
+    background-color: #646369;
+    margin-top: 50px;
+    color: #646369;
 }
 
 .items {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 37px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 37px;
 }
 
 li h4 {
-  color: #9390ff;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 24px;
+    color: #9390ff;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 24px;
 }
 
 .items ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 .first-link {
-  display: flex;
-  justify-content: space-between;
-  color: #fff;
-  align-items: center;
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 100px;
 }
 
 .link-icons {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .group-55 {
-  display: flex;
-  justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
 }
 
 .group-55 img {
-  margin-left: 15px;
-  margin-right: 15px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .group-55 p {
-  font-size: 20px;
-  color: #a2a3ae;
+    font-size: 20px;
+    color: #a2a3ae;
 }
 
 @media screen and (max-width: 768px) {
-  .first-head h1 {
-    font-size: 48px;
-  }
-
-  .first-head {
-    width: 85%;
-  }
-
-  .first-head h2 {
-    font-size: 32px;
-  }
-
-  .first-head p {
-    line-height: 28px;
-  }
-
-  .items {
-    margin-top: 20px;
-    flex-wrap: wrap;
-  }
-
-  header ul {
-    display: none;
-  }
-
-  .header-icons {
-    display: none;
-  }
-
-  .items ul {
-    width: 50%;
-  }
-
-  .work-first {
-    display: none;
-  }
-
-  .first-link {
-    flex-direction: column;
-  }
-
-  .group-55 {
-    margin-top: 30px;
-  }
-
-  header img {
-    display: block;
-  }
-
-  .first {
-    margin-top: 40px;
-    background-image: url(./assets/images/top_circles_kc.png);
-    background-size: 100% 50%;
-    background-position: left top;
-    background-repeat: no-repeat;
-  }
+    .first-head h1 {
+        font-size: 48px;
+    }
+    .first-head {
+        width: 85%;
+    }
+    .first-head h2 {
+        font-size: 32px;
+    }
+    .first-head p {
+        line-height: 28px;
+    }
+    .items {
+        margin-top: 20px;
+        flex-wrap: wrap;
+    }
+    header ul {
+        display: none;
+    }
+    .header-icons {
+        display: none;
+    }
+    .items ul {
+        width: 50%;
+    }
+    .work-first {
+        display: none;
+    }
+    .first-link {
+        flex-direction: column;
+    }
+    .group-55 {
+        margin-top: 30px;
+    }
+    header img {
+        display: block;
+    }
+    .first {
+        margin-top: 40px;
+        background-image: url(./assets/images/top_circles_kc.png);
+        background-size: 100% 50%;
+        background-position: left top;
+        background-repeat: no-repeat;
+    }
 }
 
+
 /* Middle Section */
+
 .middle-section-work {
-  margin-top: 180px;
-  padding-bottom: 60px;
-  background-image: url(./assets/images/Group\ 65.svg);
-  background-repeat: no-repeat;
-  background-position-y: 104px;
+    margin-top: 180px;
+    padding-bottom: 60px;
+    background-image: url(./assets/images/Group\ 65.svg);
+    background-repeat: no-repeat;
+    background-position-y: 104px;
 }
 
 .middle-section {
-  width: 83.3%;
-  margin: 0 auto;
+    width: 83.3%;
+    margin: 0 auto;
 }
 
 .stories {
-  margin-top: 80px;
-  display: grid;
+    margin-top: 80px;
+    display: grid;
 }
 
 .story-left {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  margin-bottom: 100px;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 100px;
 }
 
 .rect {
-  width: 55%;
-  background-color: #fff;
-  height: auto;
+    width: 55%;
+    background-color: #fff;
+    height: auto;
 }
 
 .desc {
-  width: 42%;
-  padding-left: 15px;
-  padding-top: 80px;
+    width: 42%;
+    padding-left: 15px;
+    padding-top: 80px;
 }
 
 .middle-section h3 {
-  font-weight: 700;
-  font-style: normal;
-  font-size: 64px;
-  color: #9390ff;
-  margin-bottom: 60px;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 64px;
+    color: #9390ff;
+    margin-bottom: 60px;
 }
 
 .middle-section-work p {
-  font-size: 20px;
-  font-weight: 400;
-  color: #dfe1e6;
-  line-height: 28px;
+    font-size: 20px;
+    font-weight: 400;
+    color: #dfe1e6;
+    line-height: 28px;
 }
 
 .desc h4 {
-  font-weight: 700;
-  color: #fff;
-  font-size: 40px;
-  margin-bottom: 56px;
+    font-weight: 700;
+    color: #fff;
+    font-size: 40px;
+    margin-bottom: 56px;
 }
 
 .skills {
-  display: flex;
-  align-items: center;
-  margin-top: 30px;
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
 }
 
 .skills p {
-  border-right: 1px solid #fff;
-  padding-left: 25px;
-  padding-right: 25px;
+    border-right: 1px solid #fff;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .contact-text p {
-  font-size: 20px;
-  font-weight: 400;
-  color: #b3bac5;
-  width: 100%;
-  text-align: center;
-  line-height: 28px;
-  margin-top: 25px;
-  margin-bottom: 45px;
+    font-size: 20px;
+    font-weight: 400;
+    color: #b3bac5;
+    width: 100%;
+    text-align: center;
+    line-height: 28px;
+    margin-top: 25px;
+    margin-bottom: 45px;
 }
 
 .socials p {
-  font-weight: 400;
-  font-size: 20px;
-  color: #ebebff;
+    font-weight: 400;
+    font-size: 20px;
+    color: #ebebff;
 }
 
 .skills p:last-of-type {
-  border-right: none;
+    border-right: none;
 }
 
 .desc button {
-  margin-top: 30px;
-  font-weight: 500;
-  font-size: 15px;
-  padding: 15px;
-  background-color: #9390ff;
-  border: 1px solid #9390ff;
-  color: #fff;
+    margin-top: 30px;
+    font-weight: 500;
+    font-size: 15px;
+    padding: 15px;
+    background-color: #9390ff;
+    border: 1px solid #9390ff;
+    color: #fff;
 }
 
 .desc button:hover {
-  background-color: #008ad7;
-  color: white;
+    background-color: #008ad7;
+    color: white;
 }
 
 @media screen and (max-width: 768px) {
-  .story-left {
-    margin-bottom: 50px;
-    flex-direction: column;
-  }
-
-  .middle-section-work {
-    margin-top: 80px;
-    padding-bottom: 40px;
-    background-image: url(./assets/images/portfolio\ background\ shapes\ mobile.svg);
-    background-position-y: 233px;
-  }
-
-  .middle-section {
-    width: 85%;
-    margin: 0 auto;
-  }
-
-  .middle-section h3 {
-    font-size: 40px;
-    text-transform: uppercase;
-  }
-
-  .rect {
-    width: 100%;
-    height: 236px;
-  }
-
-  .desc {
-    width: 100%;
-    padding-left: 0;
-    padding-top: 30px;
-  }
-
-  .desc h4 {
-    font-size: 24px;
-  }
-
-  .skills p {
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 15px;
-  }
-
-  .invert {
-    flex-direction: column-reverse;
-  }
+    .story-left {
+        margin-bottom: 50px;
+        flex-direction: column;
+    }
+    .middle-section-work {
+        margin-top: 80px;
+        padding-bottom: 40px;
+        background-image: url(./assets/images/portfolio\ background\ shapes\ mobile.svg);
+        background-position-y: 233px;
+    }
+    .middle-section {
+        width: 85%;
+        margin: 0 auto;
+    }
+    .middle-section h3 {
+        font-size: 40px;
+        text-transform: uppercase;
+    }
+    .rect {
+        width: 100%;
+        height: 236px;
+    }
+    .desc {
+        width: 100%;
+        padding-left: 0;
+        padding-top: 30px;
+    }
+    .desc h4 {
+        font-size: 24px;
+    }
+    .skills p {
+        padding-left: 10px;
+        padding-right: 10px;
+        font-size: 15px;
+    }
+    .invert {
+        flex-direction: column-reverse;
+    }
 }
 
+
 /* Contact Form and Footer */
+
 .contact {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 50%;
-  margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .contact h5 {
-  font-weight: 700;
-  font-size: 40px;
-  color: #9390ff;
-  line-height: 24px;
-  text-align: center;
-  margin-top: 40px;
+    font-weight: 700;
+    font-size: 40px;
+    color: #9390ff;
+    line-height: 24px;
+    text-align: center;
+    margin-top: 40px;
 }
 
 .mobile {
-  display: none;
-  text-align: center;
+    display: none;
+    text-align: center;
 }
 
 form {
-  font-size: 20px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    font-size: 20px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .data {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    width: 100%;
 }
 
 .contact-element {
-  width: 48.5%;
-  height: 50px;
-  margin-bottom: 20px;
-  padding-left: 10px;
-  padding-right: 10px;
+    width: 48.5%;
+    height: 50px;
+    margin-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .contact-element1 {
-  width: 100%;
-  height: 50px;
-  padding-left: 10px;
-  padding-right: 10px;
+    width: 100%;
+    height: 50px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .contact-element2 {
-  width: 100%;
-  height: 150px;
-  padding: 10px 15px;
+    width: 100%;
+    height: 150px;
+    padding: 10px 15px;
 }
 
 .contact-button {
-  margin-top: 30px;
-  font-weight: 500;
-  font-size: 15px;
-  padding: 17px 43px;
-  background-color: #9390ff;
-  border: 1px solid #9390ff;
-  margin-bottom: 108px;
-  color: #fff;
+    margin-top: 30px;
+    font-weight: 500;
+    font-size: 15px;
+    padding: 17px 43px;
+    background-color: #9390ff;
+    border: 1px solid #9390ff;
+    margin-bottom: 108px;
+    color: #fff;
 }
 
 .contact-button:hover {
-  background-color: #008ad7;
-  color: white;
+    background-color: #008ad7;
+    color: white;
 }
 
 .bottom-line {
-  width: 100%;
-  margin-top: 12px;
-  border: 1px solid #3a3837;
-  margin-bottom: 13px;
+    width: 100%;
+    margin-top: 12px;
+    border: 1px solid #3a3837;
+    margin-bottom: 13px;
 }
 
 .socials {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .for-mobile {
-  display: none;
+    display: none;
 }
 
 @media screen and (max-width: 768px) {
-  .contact {
-    width: 90%;
-  }
-
-  .custom {
-    display: none;
-  }
-
-  .data {
-    flex-direction: column;
-  }
-
-  .contact-element {
-    width: 100%;
-    margin-bottom: 25px;
-    display: none;
-  }
-
-  .contact-button {
-    padding: 15px 10px;
-  }
-
-  .socials {
-    flex-direction: column;
-    margin-bottom: 20px;
-  }
-
-  .chat {
-    display: none;
-  }
-
-  .mobile {
-    margin-top: 60px;
-    display: block;
-  }
-
-  .for-mobile {
-    display: block;
-  }
+    .contact {
+        width: 90%;
+    }
+    .custom {
+        display: none;
+    }
+    .data {
+        flex-direction: column;
+    }
+    .contact-element {
+        width: 100%;
+        margin-bottom: 25px;
+        display: none;
+    }
+    .contact-button {
+        padding: 15px 10px;
+    }
+    .socials {
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+    .chat {
+        display: none;
+    }
+    .mobile {
+        margin-top: 60px;
+        display: block;
+    }
+    .for-mobile {
+        display: block;
+    }
 }
+
 
 /* Transition and Animation */
+
 header .logo {
-  -webkit-animation: spin 3s linear infinite;
-  -moz-animation: spin 1s linear infinite;
-  animation: spin 1s linear infinite;
+    -webkit-animation: spin 3s linear infinite;
+    -moz-animation: spin 1s linear infinite;
+    animation: spin 1s linear infinite;
 }
 
+
 /* use keyframes */
-@-webkit-keyframes spin{
-  100%{-webkit-transform: rotate(360deg);}
+
+@-webkit-keyframes spin {
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
 }
 
 .first-head h1 {
-  -webkit-transition: -webkit-transform 1s;
+    -webkit-transition: -webkit-transform 1s;
 }
+
 .first-head h1:hover {
-  -webkit-transform: rotate(360deg) translateY(0);
+    -webkit-transform: rotate(360deg) translateY(0);
+}
+
+.desc {
+    transform: translateZ(0);
+    transition: 0.6s;
+}
+
+.desc button:hover {
+    background-image: linear-gradient(to left, #F4C64C, #1B1E1F, #69A239);
+    background-position: right;
 }
