--- a/styles.css
+++ b/styles.css
@@ -662,6 +662,38 @@ form {
   cursor: pointer;
 }
 
+.modal-menu h4 {
+  font-size: 38px;
+  margin-left: 10px;
+  color: #fff;
+}
+.modal-img img {
+  width: 100%;
+  margin-bottom: 20px;
+}
+.modal-body,
+.stack-used-1 {
+  text-align: center;
+  margin: 0 auto;
+}
+.stack-used-1,
+.modal-btn {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.modal-btn button {
+  margin: 0 20px 30px 20px;
+  padding: 10px;
+  background-color: #483ED3;
+  border-radius: 5px;
+  /* color: #fff; */
+  font-weight: bold;
+  border: 1px solid #483ED3;
+}
+
 /* Transition and Animation */
 header .logo {
   -webkit-animation: spin 3s linear infinite;
