--- a/styles.css
+++ b/styles.css
@@ -411,6 +411,14 @@ li h4 {
   color: #ebebff;
 }
 
+.modal-menu p {
+  width: 100%;
+  margin: 0 auto;
+  color: #fff;
+  font-size: 16px;
+  line-height: 24px;
+}
+
 .skills p:last-of-type {
   border-right: none;
 }
@@ -424,6 +432,15 @@ li h4 {
   border: 1px solid #9390ff;
   color: #fff;
   border-radius: 10px;
+}
+
+.modal-btn button {
+  margin: 0 20px 30px 20px;
+  padding: 10px;
+  background-color: #483ed3;
+  border-radius: 5px;
+  font-weight: bold;
+  border: 1px solid #483ed3;
 }
 
 .desc button:hover {
@@ -579,17 +596,6 @@ form {
   display: none;
 }
 
-.modal {
-  width: 85%;
-}
-.modal-menu p {
-  width: 100%;
-  margin: 0 auto;
-  color: #fff;
-  font-size: 16px;
-  line-height: 24px;
-}
-
 @media screen and (max-width: 768px) {
   .contact {
     width: 90%;
@@ -667,15 +673,18 @@ form {
   margin-left: 10px;
   color: #fff;
 }
+
 .modal-img img {
   width: 100%;
   margin-bottom: 20px;
 }
+
 .modal-body,
 .stack-used-1 {
   text-align: center;
   margin: 0 auto;
 }
+
 .stack-used-1,
 .modal-btn {
   margin-top: 20px;
@@ -683,15 +692,6 @@ form {
   justify-content: center;
   align-items: center;
   text-align: center;
-}
-.modal-btn button {
-  margin: 0 20px 30px 20px;
-  padding: 10px;
-  background-color: #483ED3;
-  border-radius: 5px;
-  /* color: #fff; */
-  font-weight: bold;
-  border: 1px solid #483ED3;
 }
 
 /* Transition and Animation */
